# keepassxc

./: kwayland-log.conf
cmake/: FindXKBCommon.cmake
docs/: UserGuide.adoc
docs/topics/: FdoSecrets.adoc
share/linux/: org.keepassxc.KeePassXC.desktop
src/autotype/: CMakeLists.txt
src/autotype/wayland/: AutoTypeWayland.cpp  AutoTypeWayland.h  AutoTypeWayland_p.h  CMakeLists.txt  KWinWaylandPlatform.cpp  KWinWaylandPlatform.h  KeyboardState.cpp  KeyboardState.h  README.md  UnicodeToKeysyms.h  keysymmap.py
